fixed button text on smaller screens.

--- a/css/main.scss
+++ b/css/main.scss
@@ -119,6 +119,7 @@ ul{
             }
         }
         #buttons{
+            // font-size: 100%;
             // background : white;
             position: relative;
             align-content: center;
@@ -127,7 +128,8 @@ ul{
         }
         #submit{
             // display:none;
-            background-color: #C7C706;
+            // font-size : 0.1em;
+	        background-color: #C7C706;
         }    
         #reset{
             // display:none;
@@ -140,7 +142,7 @@ ul{
             border-width: 0.05em;
             border-radius: 0.5em;
             font-family:'Source Code Pro';
-            font-size: 150%;
+            font-size: 100%;
             font-weight:bold;
             width : 25%;
             height: 5vh;
@@ -163,7 +165,7 @@ ul{
                 position: relative;
                 text-align: center;
                 width : 80%;
-                height : 70%;
+                height : 50%;
                 left: 10%;
                 top: 10%;
                 font-weight:bold;
@@ -174,25 +176,29 @@ ul{
                 display: none; /* for Chrome, Safari, and Opera */
             }
             #hard-off{
-                background-color: gray;
-                font-size: small;
+                background-color: #808080;
                 position: relative;
-                left: 5.6em;
+                left: 10%;
+                // top : 20%;
                 color: black;
-                width: 15em;
-                padding: 0.1em;
+                width: 80%;
+                margin : 10% 0 3% 0;
+                padding: 1%;
+                
             }
             #hard-on{
+                font-size: 100%;
                 background-color: red;
-                font-size: small;
                 position: relative;
-                left: 5.6em;
+                left: 10%;
                 color: black;
-                width: 15em;
-                padding: 0.1em;
+                width: 80%;
+                margin : 10% 0 3% 0;
+                padding: 1%;
             }
 
             #start{
+                font-size : 100%;
                 background-color: lime;
                 color:black;
                 margin:0;
